log
Thu Mar 17 14:38:12 HSP 2022: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
73ed164
Thu Mar 17 14:46:05 HSP 2022: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|0
   [ INFO ] llamando a firstList
fa97e2c
Thu Mar 17 14:46:35 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0e5f854
Thu Mar 17 14:51:55 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|0
   [ INFO ] llamando a firstList
7a19409
Thu Mar 17 14:59:15 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bf41481
Thu Mar 17 15:00:33 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|0
   [ INFO ] llamando a firstList
2c8caec
Thu Mar 17 15:01:11 HSP 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
321c9ab
Thu Mar 17 15:01:53 HSP 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|0
   [ INFO ] llamando a firstList
9ef3be8
Thu Mar 17 15:12:49 HSP 2022: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  1|0
   [ INFO ] llamando a firstList
e8992bf
Thu Mar 17 15:36:11 HSP 2022: 
 list.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  1|0
   [ INFO ] llamando a firstList
7084440
Thu Mar 17 16:02:19 HSP 2022: 
 list.c | 22 +++++++++++++---------
 1 file changed, 13 insertions(+), 9 deletions(-)
 tests:  0|0
678af2f
Thu Mar 17 16:02:52 HSP 2022: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  3|5
total_score: 15/70
d04550f
Thu Mar 17 16:05:10 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c16846a
Thu Mar 17 16:08:46 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
0a533e4
Thu Mar 17 16:15:37 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
082ddab
Thu Mar 17 16:16:46 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
72dd360
Thu Mar 17 16:22:09 HSP 2022: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  7|4
total_score: 25/70
ae47b2b
Thu Mar 17 16:24:16 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
c84b89c
Thu Mar 17 16:26:15 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
98f73d5
Thu Mar 17 16:27:16 HSP 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|4
total_score: 25/70
3991e49
Thu Mar 17 16:32:55 HSP 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|4
total_score: 25/70
a9fb66e
Thu Mar 17 16:34:34 HSP 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
215787d
Thu Mar 17 16:35:24 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function 'prevList':
list.c:70:8: error: 'lis' undeclared (first use in this function); did you mean 'list'?
   70 |     if(lis->current == NULL)return NULL;
      |        ^~~
      |        list
list.c:70:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
443cb5e
Thu Mar 17 16:35:37 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
b904db1
Thu Mar 17 16:46:20 HSP 2022: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
58248b3
Thu Mar 17 16:48:42 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'pushFront':
list.c:79:11: error: unused variable 'nodoNuevo' [-Werror=unused-variable]
   79 |     Node *nodoNuevo = createNode(data);
      |           ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3f94e35
Thu Mar 17 16:55:49 HSP 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
cd93340
Thu Mar 17 17:18:53 HSP 2022: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|0
c0e0d34
Thu Mar 17 17:27:49 HSP 2022: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
f0c31ea
Thu Mar 17 17:28:34 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1938925
Thu Mar 17 17:29:07 HSP 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
3f10952
Thu Mar 17 17:30:38 HSP 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
dedc0b1
Thu Mar 17 17:45:48 HSP 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
06992f2
Thu Mar 17 17:46:49 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
124418c
Thu Mar 17 17:51:59 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d6937dd
Thu Mar 17 17:54:02 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
ddf2bf5
Thu Mar 17 18:04:19 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
551db7b
Thu Mar 17 18:04:51 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
56ecff7
Thu Mar 17 18:07:02 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7606d7a
Thu Mar 17 18:12:16 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
73591e8
Thu Mar 17 18:12:47 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
43dec01
Thu Mar 17 18:16:42 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'pushFront':
list.c:81:19: error: comparison between pointer and integer [-Werror]
   81 |     if(list->head > 1)
      |                   ^
cc1.exe: all warnings being treated as errors
Compilation failed
e06e2ed
Thu Mar 17 18:21:33 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1eb60eb
Thu Mar 17 18:22:04 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
2707d17
